[package]
name = "wgpu_study"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.14"
cfg-if = "1"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[[bin]]
name = "wgpu_study"
path = "src/main.rs"
